# mod_google_asr

sources/: Makefile.am  curl.c  mod_sfwhisper.c  mod_sfwhisper.h  utils.c  whisper_api.cpp  whisper_api.h
sources/conf/: dialplan.xml  sfwhisper.conf.xml
